# src/apis/controllers/sendoProduct.js
@@ -5,6 +5,7 @@ const request = require('request');
 const util = require('util');
 const { time } = require("console");
 const rp = require('request-promise');
+const sendoProduct = require("../models/sendoProduct");
 
 const product_status ={
   "0": "Nháp",
@@ -147,8 +148,15 @@ module.exports.createSendoProduct = async (item, { store_id }) => {
 };
 module.exports.getAllProducts = async (req, res) => {
   try {
-    const { store_id } = req.query;
-    const sendoProducts = await SendoProduct.find({ store_id })
+    const { storeIds } = req.query;
+    console.log(storeIds)
+    let sendoProducts = []
+    await Promise.all([...storeIds.map(async storeId => {
+      
+      const products = await SendoProduct.find({store_id: storeId })
+      
+      sendoProducts = [...sendoProducts, ...products]
+    })])
 
     res.status(200).send(sendoProducts)
   } catch(e) {
